# janus

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.crm/: config.sh
config/: capabilities.yaml  janus.env.template  profiles.yaml  servers.yaml
docs/: operations.md
src/janus/: __init__.py  __main__.py  broker.py  exposure.py  gateway.py  server_mcp.py  server_rest.py
src/janus/admin/: __init__.py  __main__.py  cli.py  service.py
src/janus/audit/: __init__.py  audit_log.py  types.py
src/janus/discovery/: __init__.py  alerts.py  crawler.py  drift.py
src/janus/downstream/: __init__.py  client_manager.py  lifecycle.py
src/janus/policy/: __init__.py  engine.py  profiles.py  trifecta.py  types.py
src/janus/registry/: __init__.py  registry.py  schema_store.py
src/janus/search/: __init__.py  embedder.py  ranker.py
src/janus/security/: __init__.py  credential_broker.py  output_sanitizer.py
systemd/: janus-discover.service  janus-discover.timer  janus.service
tests/: _fake_downstream.py  test_admin.py  test_audit_sanitizer.py  test_broker.py  test_client_manager.py  test_credential_broker.py  test_discovery.py  test_drift.py  test_exposure.py  test_gateway.py  test_lifecycle.py  test_policy.py  test_registry.py  test_rest.py  test_search.py  test_smoke.py  test_trifecta.py
