[project]
name = "janus-mcp-gateway"
version = "0.0.1"
description = "Janus — MCP gateway / capability broker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27",
    "fastmcp>=2.14",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/janus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, B bugbear, UP pyupgrade, S bandit (security)
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts allowed in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-x -q"
